@@ -2,15 +2,15 @@ package com.dct.base.security.jwt;
 
 import com.dct.base.constants.AuthConstants;
 import com.dct.base.dto.BaseAuthTokenDTO;
+import com.dct.base.repositories.AuthorityRepository;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.ExpiredJwtException;
 import io.jsonwebtoken.JwtParser;
 import io.jsonwebtoken.Jwts;
 import io.jsonwebtoken.MalformedJwtException;
-import io.jsonwebtoken.UnsupportedJwtException;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
-import io.jsonwebtoken.security.SignatureException;
+import io.jsonwebtoken.security.SecurityException;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -25,10 +25,9 @@ import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 
 import javax.crypto.SecretKey;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Date;
-import java.util.stream.Collectors;
+import java.util.Set;
 
 @Component
 public class JwtTokenProvider {
@@ -36,6 +35,7 @@ public class JwtTokenProvider {
     private static final Logger log = LoggerFactory.getLogger(JwtTokenProvider.class);
     private final SecretKey secretKey;
     private final JwtParser jwtParser;
+    private final AuthorityRepository authorityRepository;
 
     @Value("${security.authentication.jwt.token-validity-in-milliseconds}")
     private long TOKEN_EXPIRED_AFTER;
@@ -43,7 +43,8 @@ public class JwtTokenProvider {
     @Value("${security.authentication.jwt.token-validity-in-milliseconds-for-remember-me}")
     private long TOKEN_FOR_REMEMBER_ME_EXPIRED_AFTER;
 
-    public JwtTokenProvider(Environment env) {
+    public JwtTokenProvider(Environment env, AuthorityRepository authorityRepository) {
+        this.authorityRepository = authorityRepository;
         String jwtSecretKey = env.getProperty("security.authentication.jwt.base64-secret");
 
         if (!StringUtils.hasText(jwtSecretKey)) {
@@ -58,12 +59,6 @@ public class JwtTokenProvider {
     }
 
     public String createToken(BaseAuthTokenDTO baseAuthTokenDTO) {
-        String authorities = baseAuthTokenDTO
-                .getAuthentication()
-                .getAuthorities().stream()
-                .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.joining(","));
-
         long now = (new Date()).getTime();
         Date validity;
 
@@ -75,10 +70,9 @@ public class JwtTokenProvider {
 
         return Jwts.builder()
                    .subject(baseAuthTokenDTO.getAuthentication().getName())
-                   .claim(AuthConstants.AUTHORITIES_KEY, authorities)
-                   .claim("id", baseAuthTokenDTO.getID())
-                   .claim("username", baseAuthTokenDTO.getUsername())
-                   .claim("deviceID", baseAuthTokenDTO.getDeviceID())
+                   .claim(AuthConstants.TOKEN_PAYLOAD.USERNAME, baseAuthTokenDTO.getUsername())
+                   .claim(AuthConstants.TOKEN_PAYLOAD.USER_ID, baseAuthTokenDTO.getID())
+                   .claim(AuthConstants.TOKEN_PAYLOAD.DEVICE_ID, baseAuthTokenDTO.getDeviceID())
                    .signWith(secretKey)
                    .issuedAt(new Date())
                    .expiration(validity)
@@ -87,10 +81,10 @@ public class JwtTokenProvider {
 
     public boolean validateToken(String authToken) {
         try {
-            jwtParser.parseSignedClaims(authToken);
+            jwtParser.parse(authToken);
             return true;
-        } catch (ExpiredJwtException | UnsupportedJwtException | MalformedJwtException | SignatureException e) {
-            log.trace("Invalid JWT token. ", e);
+        } catch (ExpiredJwtException | MalformedJwtException | SecurityException e) {
+            log.error("Invalid JWT token. ", e);
         } catch (IllegalArgumentException e) {
             log.error("Token validation error {}", e.getMessage());
         }
@@ -100,14 +94,15 @@ public class JwtTokenProvider {
 
     public Authentication getAuthentication(String token) {
         Claims claims = (Claims) jwtParser.parse(token).getPayload();
+        int userID = (int) claims.get(AuthConstants.TOKEN_PAYLOAD.USER_ID);
+        Set<String> authorities = authorityRepository.findAllByUserID(userID);
 
-        Collection<? extends GrantedAuthority> authorities = Arrays
-                .stream(String.valueOf(claims.get(AuthConstants.AUTHORITIES_KEY)).split(","))
+        Collection<? extends GrantedAuthority> userAuthorities = authorities.stream()
                 .filter(auth -> StringUtils.hasText(auth.trim()))
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
 
-        User principal = new User(claims.getSubject(), "", authorities);
-        return new UsernamePasswordAuthenticationToken(principal, token, authorities);
+        User principal = new User(claims.getSubject(), "", userAuthorities);
+        return new UsernamePasswordAuthenticationToken(principal, token, userAuthorities);
     }
 }
